--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <p class="fst-italic mb-0">
 			<br>
-			Kai Shen*, Zeqian Ju*, Xu Tan*, Yanqing Liu, Yichong Leng, Lei He, Tao Qin, Sheng Zhao, Jiang Bian <br>
+			Li Xiang*, Zeqian Ju*, Xu Tan*, Yanqing Liu, Yichong Leng, Lei He, Tao Qin, Sheng Zhao, Jiang Bian <br>
 			<p></p>
         </p>
         <p><b>Microsoft Research Asia & Microsoft Azure Speech</b></p>
