--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
 	<div class="text-center">
-	<h1>NaturalSpeech 2:</h1>
-        <h3>Latent Diffusion Models are Natural and Zero-Shot Speech and Singing Synthesizers</h3>
+	<h1>Real-Time Speech Synthesis:</h1>
+        <h3> Revealing Consistency Models and Weighted samplers in Neural TTS for Enhanced Efficiency</h3>
 		[<a href="https://arxiv.org/abs/2304.09116">Paper</a>] [<a href="https://www.reddit.com/r/singularity/comments/12rubq4/latent_diffusion_models_are_natural_and_zeroshot">Reddit Discussion</a>] [<a href="https://news.ycombinator.com/item?id=35627790">Hack News</a>]
 
         <p class="fst-italic mb-0">
