--- a/index.html
+++ b/index.html
@@ -82,74 +82,71 @@ novel zero-shot singing synthesis with only a speech prompt.
 </div>
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
-	<h2 id="sr-samples" style="text-align: center;">LibriSpeech Samples</h2>
+	<h2 id="sr-samples" style="text-align: center;">VCTK Samples</h2>
 		<div class="table-responsive pt-3">
 			<table class="table table-hover pt-2">
 			<thead>
 			<tr>
 			<th style="text-align: center">Text</th>
-			<th style="text-align: center">Prompt</th>
 			<th style="text-align: center">Ground Truth</th>
-			<th style="text-align: center">Baseline</th>
-			<th style="text-align: center">NaturalSpeech 2</th>
+			<th style="text-align: center">DiffGAN-TTS</th>
+			<th style="text-align: center">CM-TTS</th>
 			</tr>
 			</thead>
 			<tbody>
 			<tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">Indeed, there were only one or two strangers who could be admitted among the sisters without producing the same result.</td>
-			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case1/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case1/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case1/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case1/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: left;vertical-align:middle;width: 500px">It is an amazing response..</td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p227-306_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p227-306_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p227-306_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">For if he's anywhere on the farm, we can send for him in a minute.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case2/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case2/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case2/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case2/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">An appeal against the sentence was dismissed the following year.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p228-067_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p228-067_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p228-067_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">Their piety would be like their names, like their faces, like their clothes, and it was idle for him to tell himself that their humble and contrite hearts it might be paid a far-richer tribute of devotion than his had ever been. A gift tenfold more acceptable than his elaborate adoration.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case3/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case3/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case3/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case3/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">I can't get a job.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p228-250_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p228-250_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p228-250_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">The air and the earth are curiously mated and intermingled as if the one were the breath of the other.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case5/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case5/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case5/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case5/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">She died in hospital two hours later.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p229-072_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p229-072_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p229-072_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">I had always known him to be restless in his manner, but on this particular occasion he was in such a state of uncontrollable agitation that it was clear something very unusual had occurred.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case6/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case6/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case6/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case6/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">We're into that build-up now.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p329-056_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p329-056_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p329-056_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">His death in this conjuncture was a public misfortune.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case8/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case8/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case8/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case8/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">We are not out of touch with politics.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p334-104_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p334-104_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p334-104_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">It is this that is of interest to theory of knowledge.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case9/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case9/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case9/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case9/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">It's not just going to be busy.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p339-400_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p339-400_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p339-400_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">For a few miles, she followed the line hitherto presumably occupied by the coast of Algeria, but no land appeared to the south.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case10/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case10/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case10/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/librispeech_examples/case10/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">There is nothing like a fresh start..</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p376-392_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p376-392_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p376-392_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">They will know they deserve to be there..</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p341-174_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p341-174_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK/p341-174_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			</tbody>
 			</table>
