--- a/index.html
+++ b/index.html
@@ -154,68 +154,53 @@ novel zero-shot singing synthesis with only a speech prompt.
 </div>
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
-	<h2 id="sr-samples" style="text-align: center;">VCTK Samples</h2>
+	<h2 id="sr-samples" style="text-align: center;">LJSpeech Samples</h2>
 		<div class="table-responsive pt-3">
 			<table class="table table-hover pt-2">
 			<thead>
 			<tr>
 			<th style="text-align: center">Text</th>
-			<th style="text-align: center">Prompt</th>
 			<th style="text-align: center">Ground Truth</th>
-			<th style="text-align: center">Baseline</th>
-			<th style="text-align: center">NaturalSpeech 2</th>
+			<th style="text-align: center">DiffGAN-TTS</th>
+			<th style="text-align: center">CM-TTS</th>
 			</tr>
 			</thead>
 			<tbody>
 			<tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">It is an absolute nonsense.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case1/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case1/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case1/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case1/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: left;vertical-align:middle;width: 500px">America has produced a good many showy books, the typography, paper, and illustrations of which are, however, all wrong.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ001-0105_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ001-0105_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ001-0105_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">Truth is the child of time.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case2/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case2/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case2/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case2/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: left;vertical-align:middle;width: 500px">Still clings to a foolish, because misunderstood conventionality, deduced from what was once ornament, and is by no means useful.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ001-0116_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ001-0116_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ001-0116_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">We have a long way to go this week.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case3/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case3/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case3/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case3/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: left;vertical-align:middle;width: 500px">But these king's witnesses were also put at times into the press yard among the capital convicts, seemingly a very dangerous proceeding.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ002-0060_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ002-0060_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ002-0060_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">Maybe we expected too much from the fixture.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case4/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case4/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case4/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case4/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: left;vertical-align:middle;width: 500px">The prison was always in "the most filthy state imaginable.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ002-0202_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ002-0202_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ002-0202_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">We will turn the corner.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case5/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case5/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case5/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case5/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: left;vertical-align:middle;width: 500px">No remonstrance was attended to,.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ003-0004_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ003-0004_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ003-0004_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">It will also require a lengthy series of clinical trials.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case6/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case6/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case6/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case6/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: left;vertical-align:middle;width: 500px">Also to make such proposals as might appear salutary, and calculated to improve newgate and the rest of the city jails.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ003-0293_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ003-0293_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ003-0293_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">Subs not used, McKenzie, Ritchie.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case7/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case7/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case7/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case7/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">That's the only thing I will say.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case9/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case9/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case9/yourtts.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/vctk_examples/case9/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			</tr>
+			<td style="text-align: left;vertical-align:middle;width: 500px">Confinement for twelve months in the bristol jail was counted a punishment equivalent to seven years' transportation..</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ004-0174_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ004-0174_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech/LJ004-0174_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tbody>
 			</table>
 		</div>
@@ -230,9 +215,8 @@ novel zero-shot singing synthesis with only a speech prompt.
 			<thead>
 			<tr>
 			<th style="text-align: center">Text</th>
-			<th style="text-align: center">Prompt</th>
 			<th style="text-align: center">Ground Truth</th>
-			<th style="text-align: center">VALL-E</th>
+			<th style="text-align: center">DiffGAN-TTS</th>
 			<th style="text-align: center">NaturalSpeech 2</th>
 			</tr>
 			</thead>
