--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
 	<div class="text-center">
 	<h1>Real-Time Speech Synthesis:</h1>
         <h4> Revealing Consistency Models and Weighted samplers in Neural TTS for Enhanced Efficiency</h4>
-		[<a href="https://arxiv.org/abs/2304.09116">Paper</a>] [<a href="https://www.reddit.com/r/singularity/comments/12rubq4/latent_diffusion_models_are_natural_and_zeroshot">Reddit Discussion</a>] [<a href="https://news.ycombinator.com/item?id=35627790">Hack News</a>]
 
         <p class="fst-italic mb-0">
 			<br>
-			Li Xiang*, Zeqian Ju*, Xu Tan*, Yanqing Liu, Yichong Leng, Lei He, Tao Qin, Sheng Zhao, Jiang Bian <br>
+			Anonymous Submission <br>
 			<p></p>
         </p>
-        <p><b>Microsoft Research Asia & Microsoft Azure Speech</b></p>
+        <p><b>Anonymous Submission</b></p>
 	</div>
 	<p>
         <b>Abstract.</b> 
