--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ novel zero-shot singing synthesis with only a speech prompt.
 
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
-	<h2 id="sr-samples" style="text-align: center;">Samples compared with VALL-E</h2>
+	<h2 id="sr-samples" style="text-align: center;">Zero-shot on VCTK</h2>
 		<div class="table-responsive pt-3">
 			<table class="table table-hover pt-2">
 			<thead>
@@ -214,37 +214,51 @@ novel zero-shot singing synthesis with only a speech prompt.
 			<th style="text-align: center">Text</th>
 			<th style="text-align: center">Ground Truth</th>
 			<th style="text-align: center">DiffGAN-TTS</th>
-			<th style="text-align: center">NaturalSpeech 2</th>
+			<th style="text-align: center">CM-TTS</th>
 			</tr>
 			</thead>
 			<tbody>
 			<tr>
-			<td style="text-align: left;vertical-align:middle;width: 500px">And lay me down in my cold bed and leave my shining lot.</td>
-			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case1/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case1/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case1/valle.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case1/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: left;vertical-align:middle;width: 500px">An appeal against the sentence was dismissed the following year..</td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p228-067_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p228-067_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p228-067_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">Yea, his honourable worship is within, but he hath a godly minister or two with him, and likewise a leech.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case2/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case2/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case2/valle.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case2/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">I can't get a job.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p228-250_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p228-250_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p228-250_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">The army found the people in poverty and left them in comparative wealth.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case3/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case3/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case3/valle.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case3/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">As, indeed, they would be.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p228-350_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p228-350_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p228-350_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			<tr>
-				<td style="text-align: left;vertical-align:middle;width: 500px">Thus did this humane and right minded father comfort his unhappy daughter, and her mother embracing her again, did all she could to soothe her feelings.</td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case4/reference.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case4/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case4/valle.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/compare_with_valle/case4/ns.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: left;vertical-align:middle;width: 500px">He was good, but not that good.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p234-295_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p234-295_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p234-295_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">The greeks used to imagine that it was a sign from the gods to foretell war or heavy rain.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p239-015_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p239-015_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p239-015_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">It was an amazing result.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p233-064_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p233-064_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p233-064_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">It's not even finished.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p229-320_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p229-320_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/VCTK_Zero/p229-320_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
 			</tbody>
 			</table>
