--- a/index.html
+++ b/index.html
@@ -266,10 +266,82 @@ novel zero-shot singing synthesis with only a speech prompt.
 </div>
 
 
+<div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
+	<h2 id="sr-samples" style="text-align: center;">Zero-shot on LJSpeech</h2>
+		<div class="table-responsive pt-3">
+			<table class="table table-hover pt-2">
+			<thead>
+			<tr>
+			<th style="text-align: center">Text</th>
+			<th style="text-align: center">Ground Truth</th>
+			<th style="text-align: center">DiffGAN-TTS</th>
+			<th style="text-align: center">CM-TTS</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr>
+			<td style="text-align: left;vertical-align:middle;width: 500px">It was long before the many jurisdictions imitated the few.</td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ005-0105_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ005-0105_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ005-0105_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">That punishment must be reformatory as well as deterrent.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ006-0031_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ006-0031_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ006-0031_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">All these evils were set forth at length in the inspectors' first report.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ006-0045_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ006-0045_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ006-0045_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">That he appeared to feel deeply the force of the reverend gentleman's observations, especially when the chaplain spoke of.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ011-0050_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ011-0050_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ011-0050_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">The prisoner was forthwith extradited and sent back to england, which he reached with his escort on the seventeenth september the same year.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ018-0039_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ018-0039_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ018-0039_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">And that a new system of prison discipline should be introduced.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ019-0105_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ019-0105_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ019-0105_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">To safeguard business against unfair competition.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ023-0085_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ023-0085_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ023-0085_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">The formations, the ridge formations and characteristics, were insufficient for purposes of either effecting identification.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ032-0127_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ032-0127_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ032-0127_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">And abandoned because of the expense. as to the entire reconstruction of newgate, nothing had been done as yet.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ019-0178_hifgan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ019-0178_gan.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/LJSpeech_Zero/LJ019-0178_cm.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			</tbody>
+			</table>
+		</div>
+</div>
+
 
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
-	<h2 id="sr-samples" style="text-align: center;">Singing Samples - &laquoYesterday Once More&raquo</h2>
+	<h2 id="sr-samples" style="text-align: center;">Zero-shot on LJSPeech</h2>
 	<script src="lyric.js"></script>
 	<div class="table-responsive pt-3">
 		
