--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ novel zero-shot singing synthesis with only a speech prompt.
 		</div>
 </div>
 
+
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
 	<h2 id="sr-samples" style="text-align: center;">LJSpeech Samples</h2>
 		<div class="table-responsive pt-3">
@@ -202,7 +203,6 @@ novel zero-shot singing synthesis with only a speech prompt.
 			</table>
 		</div>
 </div>
-
 
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
@@ -338,10 +338,70 @@ novel zero-shot singing synthesis with only a speech prompt.
 		</div>
 </div>
 
-
+<div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
+	<h2 id="sr-samples" style="text-align: center;">Hard Case</h2>
+		<div class="table-responsive pt-3">
+			<table class="table table-hover pt-2">
+			<thead>
+			<tr>
+			<th style="text-align: center">Text</th>
+			<th style="text-align: center">CM-TTS</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr>
+			<td style="text-align: left;vertical-align:middle;width: 500px">Actress Fan Bingbing attends the screening of ’Ash Is Purest White (Jiang Hu Er Nv)’ during the 71st.</td>
+			<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/Hard/Actress Fan Bingbing attends the screening of ’Ash Is Purest White (Jiang Hu Er Nv)’ during the 71st.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">config file must contain A , B , C , D , E , F , and G .</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/Hard/config file must contain A , B , C , D , E , F , and G ..wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">int1 , int2 , int3 , int4 , int5 , int6 , int7 , int8 , int9 ,</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/Hard/int1 , int2 , int3 , int4 , int5 , int6 , int7 , int8 , int9 ,.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">K</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/Hard/K.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">two thousand and five h t t p colon slash slash news dot com dot com slash i slash n e slash f d sla.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/Hard/two thousand and five h t t p colon slash slash news dot com dot com slash i slash n e slash f d sla.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			<tr>
+				<td style="text-align: left;vertical-align:middle;width: 500px">zero zero one , MS03 - zero twenty five , MS03 - zero thirty two , MS03 - zero thirty nine ,.</td>
+				<td style="text-align: center"><audio controls="controls" style="width: 160px;"><source src="audio/Hard/zero zero one , MS03 - zero twenty five , MS03 - zero thirty two , MS03 - zero thirty nine ,.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			</tr>
+			</tbody>
+			</table>
+		</div>
+</div>
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
-	<h2 id="sr-samples" style="text-align: center;">Zero-shot on LJSPeech</h2>
+	<h2 id="model-overview" style="text-align: center;">Overview</h2>
+	<body>
+		<p style="text-align: center;">
+			<img src="pics/overview.png" width="800">
+		</p>
+	</body>
+	<p>
+		NaturalSpeech 2 consists of an audio codec encoder/decoder and a latent diffusion model conditioned on a prior (a phoneme encoder and a duration/pitch predictor).
+	</p>
+	<body>
+		<p style="text-align: center;">
+			<img src="pics/table1.png" width="600">
+		</p>
+	</body>
+	<p>
+		The comparison between NaturalSpeech 2 and previous large-scale TTS systems.
+	</p>
+
+
+</div>
+
+<div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
+	<h2 id="sr-samples" style="text-align: center;">Hard Case</h2>
 	<script src="lyric.js"></script>
 	<div class="table-responsive pt-3">
 		
