--- a/index.html
+++ b/index.html
@@ -57,21 +57,9 @@
 	<h2 id="model-overview" style="text-align: center;">Overview</h2>
 	<body>
 		<p style="text-align: center;">
-			<img src="pics/overview.png" width="800">
+			<img src="pics/CM-TTS_1.svg" width="1200">
 		</p>
 	</body>
-	<p>
-		NaturalSpeech 2 consists of an audio codec encoder/decoder and a latent diffusion model conditioned on a prior (a phoneme encoder and a duration/pitch predictor).
-	</p>
-	<body>
-		<p style="text-align: center;">
-			<img src="pics/table1.png" width="600">
-		</p>
-	</body>
-	<p>
-		The comparison between NaturalSpeech 2 and previous large-scale TTS systems.
-	</p>
-
 
 </div>
 
