--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
 	<div class="text-center">
 	<h1>Real-Time Speech Synthesis:</h1>
-        <h4> Enhancing Real Time Text-to-Speech Synthesis Efficiency through Weighted Samplers and Consistency Models</h4>
+        <h4> Enhancing Real Time Text-to-Speech Synthesis Efficiency<br>
+			through Weighted Samplers and Consistency Models</h4>
 
         <p class="fst-italic mb-0">
 			<br>
