--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
 	<div class="text-center">
 	<h1>Real-Time Speech Synthesis:</h1>
-        <h4> Enhancing Real Time Text-to-Speech Synthesis Efficiency<br>
+        <h4> Enhancing Real Time Text-to-Speech Synthesis Efficiency
 			through Weighted Samplers and Consistency Models</h4>
 
         <p class="fst-italic mb-0">
@@ -58,7 +58,7 @@
 	<h2 id="model-overview" style="text-align: center;">Overview</h2>
 	<body>
 		<p style="text-align: center;">
-			<img src="pics/CM-TTS_1.svg" width="1200">
+			<img src="pics/CM-TTS_4.svg" width="1200">
 		</p>
 	</body>
 
