--- a/index.html
+++ b/index.html
@@ -373,6 +373,91 @@
 </div>
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
+	<h2 id="VCTK Mel-spectrogram Comparison" style="text-align: center;">VCTK Mel-spectrogram Comparison</h2>
+  <div class="row">
+    <div class="col container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
+      <p style="text-align: center; font-size: 24px; margin-top: 28px;">
+		Ground Truth.
+	</p>
+		<body>
+		<p style="text-align: center;">
+			<img src="audio/VCTKpng/p283-137_hifgan.png" width="270">
+		</p>
+		</body>
+		<p style="text-align: center; font-size: 24px;">
+		DiffGAN-TTS.
+	</p>
+		<body>
+		<p style="text-align: center;">
+			<img src="audio/VCTKpng/p283-137_gan.png" width="270">
+		</p>
+	</body>
+		<p style="text-align: center; font-size: 24px;">
+		CM-TTS.
+	</p>
+		<body>
+		<p style="text-align: center;">
+			<img src="audio/VCTKpng/p283-137_cm.png" width="270">
+		</p>
+	</body>
+    </div>
+	  <div class="col container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
+      <p style="text-align: center; font-size: 24px; margin-top: 28px;">
+		Ground Truth.
+	</p>
+		<body>
+		<p style="text-align: center;">
+			<img src="audio/VCTKpng/p299-308_hifgan.png" width="220">
+		</p>
+		</body>
+		<p style="text-align: center; font-size: 24px;">
+		DiffGAN-TTS.
+	</p>
+		<body>
+		<p style="text-align: center;">
+			<img src="audio/VCTKpng/p299-308_gan.png" width="220">
+		</p>
+	</body>
+		<p style="text-align: center; font-size: 24px;">
+		CM-TTS.
+	</p>
+		<body>
+		<p style="text-align: center;">
+			<img src="audio/VCTKpng/p299-308_cm.png" width="220">
+		</p>
+	</body>
+    </div>
+    <div class="col container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
+      <p style="text-align: center; font-size: 24px; margin-top: 28px;">
+		Ground Truth.
+	</p>
+		<body>
+		<p style="text-align: center;">
+			<img src="audio/VCTKpng/p294-346_hifgan.png" width="350">
+		</p>
+		</body>
+		<p style="text-align: center; font-size: 24px;">
+		DiffGAN-TTS.
+	</p>
+		<body>
+		<p style="text-align: center;">
+			<img src="audio/VCTKpng/p294-346_gan.png" width="350">
+		</p>
+	</body>
+		<p style="text-align: center; font-size: 24px;">
+		CM-TTS.
+	</p>
+		<body>
+		<p style="text-align: center;">
+			<img src="audio/VCTKpng/p294-346_cm.png" width="350">
+		</p>
+	</body>
+    </div>
+  </div>
+</div>
+
+
+<div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
 	<h2 id="LJSpeech Mel-spectrogram Comparison" style="text-align: center;">LJSpeech Mel-spectrogram Comparison</h2>
   <div class="row">
     <div class="col container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
